apps/backend/Service-Backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: silver-guardian-backend
  namespace: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 50051      
      targetPort: 50051 # 컨테이너 내부 gRPC 포트
  type: ClusterIP
