apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silver-guardian-backend
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
